# CRYPI-Project

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  certificate.sh  docker-compose.yml
.github/workflows/: rust.yml
CRYPI_project/: Cargo.toml
given_files/: framingham_heart_disease_train.csv
protos/: file.proto
src/: client.rs  csv_file.rs  main.rs  normalize.rs  server.rs  training.rs
