[package]
name = "CRYPI_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
csv = "1.2.1"
ndarray = "0.15.6"
serde = { version = "1.0.130", features = ["derive"] }
tonic = { version = "0.7", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }
prost = "0.10.1"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
bincode = "1.3.3"
ring = "0.16.20"

[build-dependencies]
tonic-build = "0.7"